fix(addon-editor): support overflow content of table

--- a/projects/addon-editor/styles/editor-socket.css
+++ b/projects/addon-editor/styles/editor-socket.css
@@ -155,3 +155,9 @@ body.tui-editor-socket {
     font-size: 40px;
     line-height: 44px;
 }
+
+/* stylelint-disable-next-line */
+.tui-editor-socket .tableWrapper,
+.tui-editor-socket .tui-table-wrapper {
+    overflow-x: auto;
+}
